--- a/docs/tesis/resumen.tex
+++ b/docs/tesis/resumen.tex
@@ -1,19 +1,7 @@
 \chapter*{Resumen}
 \thispagestyle{empty}
 
-El resumen es la síntesis de lo que aparece en el resto del
-documento. Tiene que ser lo suficientemente conciso y claro para que
-alguien que lo lea sepa qué esperar del resto del trabajo, y se motive
-para leerla completamente.  Usualmente resume lo más relevante de la
-introducción y contiene la conclusión más importante del trabajo.
-
-Es usual agregar palabras clave, que son los temas principales
-tratados en el documento. El resumen queda fuera de la numeración del
-resto de secciones.
-
-Evite utilizar referencias bibliográficas, \tablas, o figuras en el
-resumen.
-
+Las herramientas de trasmisión de video en vivo son habituales en contextos profesionales, académicos y recreativos gracias a los avances actuales en velocidad de red, procesamiento de imágenes y tecnología digital. Existe un gran interés por garantizar una alta calidad de experiencia (QoE) para estos servicios. Estos servicios pueden sufrir de artefactos de vídeo causados por pérdidas de paquetes durante la transmisión de vídeo. El proyecto anterior de dispTEC2-2022 pretendía crear un Sistemas de Restauración de Vídeo para restaurar eficazmente el vídeo con pérdidas en línea, pero concluyó sin un Sistema de Detección de Artefactos adecuado. Este proyecto propone Rangerx, que mejora el sistema de detección de dispTEC2-2022, basado en Bosques de Decisión Aleatoria (RDF), en 3 aspectos: Rangerx fue entrenado con un conjunto de datos más grande, con una nueva estrategia optimizada de extracción de características, y con un nuevo RDF optimizado.
 \bigskip
 
 %% Defina las palabras clave con defKeywords en config.tex:
