Add possible solution chapter outline

--- a/docs/tesis/solucion.tex
+++ b/docs/tesis/solucion.tex
@@ -1,14 +1,43 @@
-\chapter{Solución propuesta}
+\chapter{Random Forest Video Artifact Detector }
 \label{ch:solucion}
 
-Primero que todo, jamás utilice el título indicado arriba, sino algo
-relacionado con su solución: ``Sistema de corrección de distorsión'' o lo que
-competa a su tesis en particular.
+\begin{figure} [!h]
+  \centering
+  
+  \includegraphics{detector_general}
+  
+  \caption{General Artifact Detection System Overview. }
+  \label{fig:detector_overview}
 
-Este capítulo puede separarse en varias secciones, dependiendo del problema
-concreto. Aquí los algoritmos o el diseño del sistema deben quedar lo
-suficientemente claros para que otra persona pueda re-implementar al sistema
-propuesto. Sin embargo, el enfoque no debe nunca concentrarse en los detalles
-de la implementación particular realizada, sino del diseño conceptual como tal.
+\end{figure}
 
-Recuerdese que toda \tabla{} y figura debe estar referenciada en el texto.
+\begin{figure} [!h]
+  \centering
+  
+  \includegraphics{detector_steps}
+  
+  \caption{Artifact Detection process. }
+  \label{fig:detector_steps}
+
+\end{figure}
+
+\section{General Detector Structure}
+\label{sec:sol_struct}
+
+\section{Training}
+\label{sec:sol_}
+
+\subsection{Generating }
+\label{sec:intro_problem}
+
+\section{Testing}
+\label{sec:intro_problem}
+
+\section{Video Artifact Detection}
+\label{sec:intro_problem}
+
+\section{Video Artifact Detection}
+\label{sec:intro_problem}
+
+\section{Video Artifact Detection}
+\label{sec:intro_problem}
