Move the general description section

--- a/docs/tesis/solucion.tex
+++ b/docs/tesis/solucion.tex
@@ -1,6 +1,9 @@
 \chapter{Random Forest Video Artifact Detector }
 \label{ch:solucion}
 
+\section{General Rangerx Structure}
+\label{sec:sol_struct}
+
 \begin{figure} [!h]
   \centering
   
@@ -21,8 +24,7 @@
 
 \end{figure}
 
-\section{General Detector Structure}
-\label{sec:sol_struct}
+
 
 \section{Training}
 \label{sec:sol_}
